--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -7,11 +7,11 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
+  <ion-list *ngFor="let region of regions">
+    <ion-list-header>Found Beacons</ion-list-header>
     <ion-item>
       <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
+      {{region.identifier}}
     </ion-item>
   </ion-list>
 </ion-content>
