--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Time" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="GPS" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Camera" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Beacons" tabIcon="contacts"></ion-tab>
 </ion-tabs>
