Log as Variable

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -14,6 +14,9 @@
       {{foundBeacon.UUID + ":" + foundBeacon.Major + ":" + foundBeacon.Minor}}
     </ion-item>
   </ion-list>
+  <!-- <ion-item>
+    <ion-textarea value={{log}}></ion-textarea>
+  </ion-item> -->
 </ion-content>
 
 
