Log as Variable 2

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -7,16 +7,16 @@
 </ion-header>
 
 <ion-content>
-  <ion-list *ngFor="let foundBeacon of foundBeacons">
+  <!-- <ion-list *ngFor="let foundBeacon of foundBeacons">
     <ion-list-header>Found Beacons</ion-list-header>
     <ion-item>
       <ion-icon name="ionic" item-start></ion-icon>
       {{foundBeacon.UUID + ":" + foundBeacon.Major + ":" + foundBeacon.Minor}}
     </ion-item>
-  </ion-list>
-  <!-- <ion-item>
-    <ion-textarea value={{log}}></ion-textarea>
-  </ion-item> -->
+  </ion-list> -->
+  <ion-item>
+    <ion-textarea value="Test"></ion-textarea>
+  </ion-item>
 </ion-content>
 
 
