--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -7,17 +7,11 @@
 </ion-header>
 
 <ion-content>
-  <!-- <ion-list *ngFor="let region of regions">
+  <ion-list *ngFor="let region of regions">
     <ion-list-header>Found Beacons</ion-list-header>
     <ion-item>
       <ion-icon name="ionic" item-start></ion-icon>
       {{region.identifier}}
     </ion-item>
-  </ion-list> -->
-  <ion-item>
-    <ion-textarea value={{log1}}></ion-textarea>
-  </ion-item>
-  <ion-item>
-    <ion-textarea value={{log2}}></ion-textarea>
-  </ion-item>
+  </ion-list>
 </ion-content>
